FIX layout issues

--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 h1,
-h2 {
+h2, h3 {
     font-family: var(--heading-font-family);
 }
 
@@ -175,11 +175,6 @@ color: var(--bg-color);
     background-size: cover;
 }
 
-.vertical-top {
-    display: inline;
-    vertical-align: top;
-    width: 150px;
-}
 
 
 /* Feedback form */
@@ -216,7 +211,7 @@ select {
 @media only screen and (max-width: 600px) {
 
     .hero-text {
-        width: 250px;
+        width: 300px;
         margin: 20px auto;
     }
 }
@@ -238,8 +233,6 @@ select {
     input,
 select, textarea {
     width: 90%;
-   
-}
+   }
 }
 
-@media only screen and (min-height: 1024px) {}
